cluster/apps/networking/traefik/external/unraid/remote/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: remote
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.102.46
    ports:
      - name: default
        port: 51822
        protocol: TCP
