cluster/apps/networking/traefik/external/unraid/remote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remote
  namespace: external
spec:
  ports:
    - name: default
      port: 51822
      protocol: TCP
      targetPort: 51822
  clusterIP: None
  type: ClusterIP
