cluster/apps/networking/traefik/external/unraid/remote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: key
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: remote
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_REMOTE_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: remote
                port:
                  number: 51822
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_REMOTE_DOMAIN}"
      secretName: remote-tls
